<resources>
    <string name="app_name">Notes App</string>
    <string name="sub_title">Life is to Fast so don\'t forget anything just Note it!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title....</string>
    <string name="subtitle">Subtitle....</string>
    <string name="notes">Notes...</string>
    <string name="_23_march_2023">23 March 2023</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="delete">Delete</string>
</resources>